--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <title>Ramadan - Frontend Developer Portfolio</title>
-    <meta name="description" content="Frontend Developer and Creative Problem Solver specializing in HTML, CSS, Bootstrap, Tailwind, JavaScript, and React. View my projects and get in touch." />
+    <title>Ramadan - Fullstack Developer Portfolio</title>
+    <meta name="description" content="Fullstack Developer and Creative Problem Solver specializing in HTML, CSS, Bootstrap, Tailwind, JavaScript, and React. View my projects and get in touch." />
     <meta name="author" content="Ramadan" />
 
-    <meta property="og:title" content="Ramadan - Frontend Developer Portfolio" />
-    <meta property="og:description" content="Frontend Developer and Creative Problem Solver specializing in HTML, CSS, Bootstrap, Tailwind, JavaScript, and React." />
+    <meta property="og:title" content="Ramadan - Fullstack Developer Portfolio" />
+    <meta property="og:description" content="Fullstack Developer and Creative Problem Solver specializing in HTML, CSS, Bootstrap, Tailwind, JavaScript, and React." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
