--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="./favicon.png" />
     <title>Ramadan-Fullstack Developer Portfolio</title>
     <meta name="description" content="Fullstack Developer and Creative Problem Solver specializing in HTML, CSS, Bootstrap, Tailwind, JavaScript, and React. View my projects and get in touch." />
     <meta name="author" content="Ramadan" />
@@ -20,6 +20,6 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
