--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Ramadan - Fullstack Developer Portfolio" />
     <meta property="og:description" content="Fullstack Developer and Creative Problem Solver specializing in HTML, CSS, Bootstrap, Tailwind, JavaScript, and React." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="public/my_Image.png" />
+    <meta property="og:image" content="/my_Image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@my-Images " />
-    <meta name="twitter:image" content="public/my_Image.png" />
+    <meta name="twitter:image" content="/my_Image.png" />
   </head>
 
   <body>
