--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta property="og:url" content="https://portifolio-eight-olive.vercel.app/" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="https://twitter.com/MrNibras3" />
-    <meta name="twitter:creator" content="https://twitter.com/MrNibras3 />
+    <meta name="twitter:site" content="@MrNibras3" />
+    <meta name="twitter:creator" content="@MrNibras3" />
     <meta name="twitter:title" content="Ramadan - Fullstack Developer Portfolio" />
     <meta name="twitter:description" content="Fullstack Developer and Creative Problem Solver specializing in HTML, CSS, Bootstrap, Tailwind, JavaScript, and React." />
     <meta name="twitter:image" content="/my_Image.png" />
