update preview images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="./favicon.png" />
-    <title>Ramadan-Fullstack Developer Portfolio</title>
+    <title>Ramadan - Fullstack Developer Portfolio</title>
     <meta name="description" content="Fullstack Developer and Creative Problem Solver specializing in HTML, CSS, Bootstrap, Tailwind, JavaScript, and React. View my projects and get in touch." />
     <meta name="author" content="Ramadan" />
 
@@ -12,6 +12,10 @@
     <meta property="og:description" content="Fullstack Developer and Creative Problem Solver specializing in HTML, CSS, Bootstrap, Tailwind, JavaScript, and React." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://portifolio-eight-olive.vercel.app/my_Image.png" />
+    <meta property="og:image:secure_url" content="https://portifolio-eight-olive.vercel.app/my_Image.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://portifolio-eight-olive.vercel.app/" />
 
     <meta name="twitter:card" content="summary_large_image" />
